[package]
name = "fc-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sc-client-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-block-builder = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-inherents = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
fp-consensus = { version = "0.1.0", path = "../../primitives/consensus" }
fp-rpc = { path = "../../primitives/rpc" }
sp-consensus = { version = "0.8.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28"}
